--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     })();
   </script>
   <!--End of Tawk.to Script-->
+  <script async defer data-domain="logframelab.ai" src="https://plausible.io/js/plausible.js"></script>
   <body>
     <app-root></app-root>
   </body>
