--- a/src/index.html
+++ b/src/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:v="urn:schemas-microsoft-com:vml" xmlns:o="urn:schemas-microsoft-com:office:office">
   <head>
     <meta charset="utf-8" />
     <title>logframelab | Arqaam</title>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="viewport" content="width=device-width, minimum-scale=1.0" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <base href="/" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+ 
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <!--Start of Tawk.to Script-->
@@ -22,7 +25,17 @@
     })();
   </script>
   <!--End of Tawk.to Script-->
+  <script src="assets/jquery.js"></script>
+  <script src="assets/jquery-ui.js"></script>
+  <script async src="assets/draw2d.js"></script>
+  <!-- <script
+  src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+  crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/ui/1.11.4/jquery-ui.min.js" integrity="sha256-xNjb53/rY+WmG+4L6tTl9m6PpqknWZvRt0rO1SRnJzw=" crossorigin="anonymous"></script> -->
   <script async defer data-domain="logframelab.ai" src="https://plausible.io/js/plausible.js"></script>
+ 
+  
   <body>
     <app-root></app-root>
   </body>
