--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
   <script src="assets/jquery.js"></script>
   <script src="assets/jquery-ui.js"></script>
   <script async src="assets/draw2d.js"></script>
+  
   <!-- <script
   src="https://code.jquery.com/jquery-3.5.1.min.js"
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
@@ -39,4 +40,5 @@
   <body>
     <app-root></app-root>
   </body>
+  <script async src="assets/Toolbar.js"></script>
 </html>
