Added Minified File and Refactored Code

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
   <!--End of Tawk.to Script-->
   <script src="assets/jquery.js"></script>
   <script src="assets/jquery-ui.js"></script>
-  <script async src="assets/draw2d.js"></script>
+  <script async src="assets/draw2d.min.js"></script>
   <script async defer data-domain="logframelab.ai" src="https://plausible.io/js/plausible.js"></script> 
   <body>
     <app-root></app-root>
